Fixed issue with filter-card overflow not wrapping

--- a/src/components/filter-card/filter-card.css
+++ b/src/components/filter-card/filter-card.css
@@ -1,4 +1,5 @@
 .filter-card {
+  display: flex;
   width: 100%;
   border-radius: 20px;
   background: #fcfbfb;
@@ -10,7 +11,6 @@
 }
 
 .filter-card-details {
-  height: 100%;
   display: grid;
   place-content: left;
 }
@@ -33,6 +33,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .filter-toggle {
@@ -95,6 +96,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .filter-action {
@@ -108,7 +110,7 @@
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  overflow: hidden;
+  white-space: nowrap;
 }
 
 .filter-action:hover {
